--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>Life in the wild</title>
-            <link rel="stylesheet" type="text/css" href="xx.css">
+            <link rel="stylesheet" type="text/css" href="style.css">
             <a
         </head>
         <body>
