--- a/index.html
+++ b/index.html
@@ -1,24 +1,16 @@
-<DOCTYPE html>
-    <html>
-        <head>
-            <title>Life in the wild</title>
-            <link rel="stylesheet" type="text/css" href="style.css">
-        </head>
-        <body>
-            <h1>Life in the wild</h1>
-            <div class ="container">
-                <img src ="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg">
-                <img src =" https://static.pexels.com/photos/66898/elephant-cub-tsavo-kenya-66898.jpeg
-                ">
-                <img src ="https://static.pexels.com/photos/50988/ape-berber-monkeys-mammal-affchen-50988.jpeg">
-                <img src ="https://static.pexels.com/photos/133459/pexels-photo-133459.jpeg
-                ">
-                <img src ="https://static.pexels.com/photos/158471/ibis-bird-red-animals-158471.jpeg
-                ">
-                <img src =" https://static.pexels.com/photos/213399/pexels-photo-213399.jpeg">
-            </div>
-        </body>
 
-
-
-    </html>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Gradient Background</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body id="gradient">
+	<h1>Background Generator</h1>
+	<input class="color1" type="color" name="color1" value="#00ff00">
+	<input class="color2" type="color" name="color2" value="#ff0000">
+	<h2>Current CSS Background</h2>
+	<h3></h3>
+	<script type="text/javascript" src="script.js"></script>
+</body>
+</html>
