--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
         <body>
             <h1>Life in the wild</h1>
             <div class ="container">
-                <img src ="horse-herd-fog-nature-52500.jpeg">
-                <img src =" elephant-cub-tsavo-kenya-66898.jpeg
+                <img src ="horse-herd.jpeg">
+                <img src =" elephant-cub.jpeg
                 ">
-                <img src ="ape-berber-monkeys-mammal-affchen-50988.jpeg">
-                <img src ="133459/pexels-photo-133459.jpeg
+                <img src ="ape-berber.jpeg">
+                <img src ="pexels-photo.jpeg
                 ">
-                <img src ="ibis-bird-red-animals-158471.jpeg
+                <img src ="ibis-bird-red.jpeg
                 ">
-                <img src =" 213399/pexels-photo-213399.jpeg">
+                <img src =" pexels-photos.jpeg">
             </div>
         </body>
 
