--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 <DOCTYPE html>
     <html>
         <head>
-            <title>Life in the wild</title>
+            <title>Chris</title>
             <link rel="stylesheet" type="text/css" href="style.css">
         </head>
         <body>
-            <h1>Life in the wild</h1>
+            <h1>Coming Soon</h1>
             <div class ="container">
-                <img src ="horse-herd.jpeg">
-                <img src ="elephant-cub.jpeg
-                ">
-                <img src ="ape-berber.jpeg">
-                <img src ="pexels-photo.jpeg
-                ">
-                <img src ="ibis-bird-red.jpeg
-                ">
-                <img src ="pexels-photos.jpeg">
+                <img src ="xris.jpg">
+                
             </div>
         </body>
 
