Restructured my first web page

--- a/first_webpage.html
+++ b/first_webpage.html
@@ -7,15 +7,15 @@
         <body>
             <h1>Life in the wild</h1>
             <div class ="container">
-                <img src ="horse-herd.jpeg">
-                <img src ="elephant-cub.jpeg
+                <img src ="images/wild_animals/horse-herd.jpeg">
+                <img src ="images/wild_animals/elephant-cub.jpeg
                 ">
-                <img src ="ape-berber.jpeg">
-                <img src ="pexels-photo.jpeg
+                <img src ="images/wild_animals/ape-berber.jpeg">
+                <img src ="images/wild_animals/pexels-photo.jpeg
                 ">
-                <img src ="ibis-bird-red.jpeg
+                <img src ="images/wild_animals/ibis-bird-red.jpeg
                 ">
-                <img src ="pexels-photos.jpeg">
+                <img src ="images/wild_animals/pexels-photos.jpeg">
             </div>
         </body>
 
