Redirected the index page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <body>
             <h1>Coming Soon</h1>
             <div class ="container">
-                <img src ="xris.jpg">
+                <img src ="images/xris.jpg">
                 
             </div>
         </body>
