Updated the home page

--- a/first_webpage.html
+++ b/first_webpage.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>Life in the wild</title>
-            <link rel="stylesheet" type="text/css" href="style.css">
+            <link rel="stylesheet" type="text/css" href="animals.css">
         </head>
         <body>
             <h1>Life in the wild</h1>
