Updated  the nav bar

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
       </a>
       
       <nav class="site-nav" aria-label="Primary">
+        <a href="./">Home</a>
         <a href="./research.html">Research</a>
         <a href="./teaching.html">Teaching</a>
-        <a href="./publications.html">Presentations</a>
-      </nav>
+        <a href="./publications.html">Publications</a>
+    </nav>
+
       
     </div>
   </header>
@@ -39,7 +41,7 @@
   <!-- Main -->
   <main class="container">
     <section class="hero" id="home">
-      <h1>Welcome to my page</h1>
+      <h1>About me</h1>
       <p>
         I'm a  Mathematics PhD candidate at the University of Houston. 
         I study and build methods for continuous time learning. I enjoy teaching and coding challenges.
