--- a/index.html
+++ b/index.html
@@ -23,30 +23,36 @@
     <div class="container">
       <a class="brand" href="./" aria-label="Deep Math home">
         <!-- Use your own logo.svg or logo.jpg -->
-        <img class="brand-logo" src="images/logo.svg" alt="Deep Math" />
-        <span class="site-title">Deep Math</span>
+            <img class="brand-logo" src="images/logo.svg" alt="Deep Math" />
+            <span class="site-title">Deep Math</span>
       </a>
       
-      <!-- Hamburger toggle (mobile) -->
-    <button class="nav-toggle" aria-label="Open menu" aria-expanded="false" aria-controls="primary-nav">
-    <!-- three bars -->
-    <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
-        <path d="M3 6h18v2H3zM3 11h18v2H3zM3 16h18v2H3z" fill="currentColor"/>
-    </svg>
-    </button>
+        <!-- Hamburger toggle (mobile) -->
+        <button class="nav-toggle" aria-label="Open menu" aria-expanded="false" aria-controls="primary-nav">
+        <!-- three bars -->
+        <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
+            <path d="M3 6h18v2H3zM3 11h18v2H3zM3 16h18v2H3z" fill="currentColor"/>
+        </svg>
+        </button>
 
-    <!-- Primary nav -->
-    <nav class="site-nav" id="primary-nav" aria-label="Primary">
-    <a href="./">Home</a>
-    <a href="./research.html">Research</a>
-    <a href="./teaching.html">Teaching</a>
-    <a href="./publications.html">Publications</a>
-    </nav>
+        <!-- Primary nav -->
+        <nav class="site-nav" id="primary-nav" aria-label="Primary">
+            <a href="./">Home</a>
+            <a href="./research.html">Research</a>
+            <a href="./teaching.html">Teaching</a>
+            <a href="./publications.html">Publications</a>
+       </nav>
 
-
-      
     </div>
   </header>
+
+  <!-- Full-width feature image -->
+<section class="feature" style="background-image: url('images/xris.jpg');">
+  <div class="container typeset">
+    <!-- I can add a text here -->
+  </div>
+</section>
+
 
   <!-- Main -->
   <main class="container">
