--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <section class="hero" id="home">
       <h1>About me</h1>
       <p>
-        I'm a  Mathematics PhD candidate at the University of Houston. 
+        I'm a  Mathematics PhD candidate at the <a href="https://www.uh.edu/nsm/math/">University of Houston.</a> 
         I study and build methods for continuous time learning. I enjoy teaching and coding challenges.
       </p>
     </section>
