--- a/index.html
+++ b/index.html
@@ -62,6 +62,15 @@
         I'm a  Mathematics PhD candidate at the <a href="https://www.uh.edu/nsm/math/">University of Houston.</a> 
         I study and build methods for continuous time learning. I enjoy teaching and coding challenges.
       </p>
+
+      <p>
+        My research interests include Scientific computing and numerical methods, 
+        tomographic inverse problem, numerical optimization, and deep learning.
+      </p>
+
+      <p>
+        I currently  work under the supervision of <a href="https://www.math.uh.edu/~andreas/">  Andreas Mang.</a> 
+      </p>
     </section>
   </main>
 
