--- a/teaching.html
+++ b/teaching.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>404 — Page Not Found | Deep Math</title>
+  <title>Teaching — Deep Math</title>
 
-  <!-- Favicons (match your index.html paths) -->
+  <!-- Favicon (same paths as index.html) -->
   <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
   <link rel="icon" href="images/favicon.jpg" type="image/jpeg" sizes="192x192">
 
-  <meta name="robots" content="noindex" />
+  <meta name="description" content="Teaching — courses assisted, tutoring, and research assistantship." />
   <link rel="stylesheet" href="./styles.css" />
 </head>
 <body>
@@ -21,34 +21,47 @@
         <span class="site-title">Deep Math</span>
       </a>
 
-      <!-- Hamburger toggle (mobile) -->
+      <!-- Hamburger (mobile) -->
       <button class="nav-toggle" aria-label="Open menu" aria-expanded="false" aria-controls="primary-nav">
         <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
           <path d="M3 6h18v2H3zM3 11h18v2H3zM3 16h18v2H3z" fill="currentColor"/>
         </svg>
       </button>
 
-      <!-- Primary nav -->
+      <!-- Nav -->
       <nav class="site-nav" id="primary-nav" aria-label="Primary">
         <a href="./">Home</a>
         <a href="./research.html">Research</a>
-        <a href="./teaching.html">Teaching</a>
+        <a href="./teaching.html" aria-current="page">Teaching</a>
         <a href="./presentations.html">Presentations</a>
       </nav>
     </div>
   </header>
 
-  <!-- 404 content -->
+  <!-- Main -->
   <main class="container">
-    <section class="hero" style="text-align:center; padding:80px 0 120px;">
-      <h1 style="font-size: clamp(32px, 6vw, 64px); margin-bottom: 12px;">404 — Page Not Found</h1>
-      <p class="muted" style="margin-bottom: 28px;">
-        The page you’re looking for doesn’t exist or has moved.
-      </p>
+    <section class="hero" id="teaching">
+      <h1>Teaching</h1>
+
+      <h2 style="margin-top: 1.5rem;">Teaching Assistant @ UH</h2>
+      <ul>
+        <li>Grader: <strong>Math 2413 — Calculus I</strong>, <em>Summer 2025</em></li>
+        <li>Lab Instructor: <strong>Math 2414 — Calculus II</strong>, <em>Spring 2025</em></li>
+        <li>Grader: <strong>Math 3363 — Introduction to Partial Differential Equations</strong>, <em>Spring 2025</em></li>
+        <li>Grader: <strong>Math 3363 — Introduction to Partial Differential Equations</strong>, <em>Fall 2024</em></li>
+        <li>Tutoring: <strong>CASA Tutorial Center</strong>, <em>Spring 2024</em></li>
+        <li>Grader: <strong>Math 2413 (Calculus I)</strong>, <strong>Math 2414 (Calculus II)</strong> and <strong>Engineering Math</strong> exam grading, <em>Spring 2024</em></li>
+      </ul>
+
+      <h2 style="margin-top: 1.5rem;">Research Assistant @ UH</h2>
+      <ul>
+        <li>RA: <strong>Neural Hawkes Process</strong>, Dr. Mikyoung Jun, <em>Summer 2024</em></li>
+      </ul>
+
+      <h2 style="margin-top: 1.5rem;">Contact</h2>
       <p>
-        <a href="./" style="padding:10px 14px; border:1px solid var(--border); border-radius:10px;">
-          ← Go to Home
-        </a>
+        Office: Philip Gutherie Hoffman Hall (PGH), Office 605<br>
+        E-mail: <a href="mailto:ccchukw2@cougarnet.uh.edu">ccchukw2@cougarnet.uh.edu</a>
       </p>
     </section>
   </main>
