--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="./">Home</a>
             <a href="./research.html">Research</a>
             <a href="./teaching.html">Teaching</a>
-            <a href="./publications.html">Publications</a>
+            <a href="./presentations.html">Presentations</a>
        </nav>
 
     </div>
