Jekyll permalinks added

--- a/404.html
+++ b/404.html
@@ -31,9 +31,9 @@
       <!-- Primary nav -->
       <nav class="site-nav" id="primary-nav" aria-label="Primary">
         <a href="./">Home</a>
-        <a href="./research.html">Research</a>
-        <a href="./teaching.html">Teaching</a>
-        <a href="./presentations.html">Presentations</a>
+        <a href="/research/">Research</a>
+        <a href="/teaching/">Teaching</a>
+        <a href="/presentations/">Presentations</a>
       </nav>
     </div>
   </header>
