--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Deep Math — Christopher C. Chukwuemeka</title>
 
   <!-- Favicon: use your actual filenames; both links are fine -->
-  <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
-  <link rel="icon" href="images/favicon.jpg" type="image/jpeg" sizes="192x192">
+  <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="/images/favicon.jpg" type="image/jpeg" sizes="192x192">
 
   <meta name="description" content="Deep Math — notes and research." />
   <meta property="og:title" content="Deep Math" />
@@ -15,7 +15,7 @@
   <meta property="og:image" content="https://chrischukw.github.io/images/logo.svg" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <!-- Title bar -->
@@ -23,7 +23,7 @@
     <div class="container">
       <a class="brand" href="./" aria-label="Deep Math home">
         <!-- Use your own logo.svg or logo.jpg -->
-            <img class="brand-logo" src="images/logo.svg" alt="Deep Math" />
+            <img class="brand-logo" src="/images/logo.svg" alt="Deep Math" />
             <span class="site-title">Deep Math</span>
       </a>
       
@@ -38,16 +38,16 @@
         <!-- Primary nav -->
         <nav class="site-nav" id="primary-nav" aria-label="Primary">
             <a href="./">Home</a>
-            <a href="./research.html">Research</a>
-            <a href="./teaching.html">Teaching</a>
-            <a href="./presentations.html">Presentations</a>
+            <a href="/research/">Research</a>
+            <a href="/teaching/">Teaching</a>
+            <a href="/presentations/">Presentations</a>
        </nav>
 
     </div>
   </header>
 
   <!-- Full-width feature image -->
-<section class="feature" style="background-image: url('images/xris.jpg');">
+<section class="feature" style="background-image: url('/images/xris.jpg');">
   <div class="container typeset">
     <!-- I can add a text here -->
   </div>
