--- a/teaching.html
+++ b/teaching.html
@@ -1,3 +1,8 @@
+---
+permalink: /teaching/
+title: Teaching — Deep Math
+layout: null
+---
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,18 +11,18 @@
   <title>Teaching — Deep Math</title>
 
   <!-- Favicon (same paths as index.html) -->
-  <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
-  <link rel="icon" href="images/favicon.jpg" type="image/jpeg" sizes="192x192">
+  <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="/images/favicon.jpg" type="image/jpeg" sizes="192x192">
 
   <meta name="description" content="Teaching — courses assisted, tutoring, and research assistantship." />
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <!-- Header -->
   <header class="site-header">
     <div class="container">
       <a class="brand" href="./" aria-label="Deep Math home">
-        <img class="brand-logo" src="images/logo.svg" alt="Deep Math" />
+        <img class="brand-logo" src="/images/logo.svg" alt="Deep Math" />
         <span class="site-title">Deep Math</span>
       </a>
 
@@ -31,9 +36,9 @@
       <!-- Nav -->
       <nav class="site-nav" id="primary-nav" aria-label="Primary">
         <a href="./">Home</a>
-        <a href="./research.html">Research</a>
-        <a href="./teaching.html" aria-current="page">Teaching</a>
-        <a href="./presentations.html">Presentations</a>
+        <a href="/research/">Research</a>
+        <a href="/teaching/" aria-current="page">Teaching</a>
+        <a href="/presentations/">Presentations</a>
       </nav>
     </div>
   </header>
