--- a/404.html
+++ b/404.html
@@ -6,18 +6,18 @@
   <title>404 — Page Not Found | Deep Math</title>
 
   <!-- Favicons (match your index.html paths) -->
-  <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
-  <link rel="icon" href="images/favicon.jpg" type="image/jpeg" sizes="192x192">
+  <link rel="icon" href="/images/favicon.svg" type="image/svg+xml">
+  <link rel="icon" href="/images/favicon.jpg" type="image/jpeg" sizes="192x192">
 
   <meta name="robots" content="noindex" />
-  <link rel="stylesheet" href="./styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <!-- Header -->
   <header class="site-header">
     <div class="container">
       <a class="brand" href="./" aria-label="Deep Math home">
-        <img class="brand-logo" src="images/logo.svg" alt="Deep Math" />
+        <img class="brand-logo" src="/images/logo.svg" alt="Deep Math" />
         <span class="site-title">Deep Math</span>
       </a>
 
