fixed home link

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <!-- Primary nav -->
         <nav class="site-nav" id="primary-nav" aria-label="Primary">
-            <a href="./">Home</a>
+            <a href="/">Home</a>
             <a href="/research/">Research</a>
             <a href="/teaching/">Teaching</a>
             <a href="/presentations/">Presentations</a>
