--- a/teaching.html
+++ b/teaching.html
@@ -35,7 +35,7 @@ layout: null
 
       <!-- Nav -->
       <nav class="site-nav" id="primary-nav" aria-label="Primary">
-        <a href="./">Home</a>
+        <a href="/">Home</a>
         <a href="/research/">Research</a>
         <a href="/teaching/" aria-current="page">Teaching</a>
         <a href="/presentations/">Presentations</a>
