--- a/404.html
+++ b/404.html
@@ -30,7 +30,7 @@
 
       <!-- Primary nav -->
       <nav class="site-nav" id="primary-nav" aria-label="Primary">
-        <a href="./">Home</a>
+        <a href="/">Home</a>
         <a href="/research/">Research</a>
         <a href="/teaching/">Teaching</a>
         <a href="/presentations/">Presentations</a>
@@ -46,7 +46,7 @@
         The page you’re looking for doesn’t exist or has moved.
       </p>
       <p>
-        <a href="./" style="padding:10px 14px; border:1px solid var(--border); border-radius:10px;">
+        <a href="/" style="padding:10px 14px; border:1px solid var(--border); border-radius:10px;">
           ← Go to Home
         </a>
       </p>
