updated home link

--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
   <!-- Header -->
   <header class="site-header">
     <div class="container">
-      <a class="brand" href="./" aria-label="Deep Math home">
+      <a class="brand" href="/" aria-label="Deep Math home">
         <img class="brand-logo" src="/images/logo.svg" alt="Deep Math" />
         <span class="site-title">Deep Math</span>
       </a>
