--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <!-- Title bar -->
   <header class="site-header">
     <div class="container">
-      <a class="brand" href="./" aria-label="Deep Math home">
+      <a class="brand" href="/" aria-label="Deep Math home">
         <!-- Use your own logo.svg or logo.jpg -->
             <img class="brand-logo" src="/images/logo.svg" alt="Deep Math" />
             <span class="site-title">Deep Math</span>
