--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <h1>About me</h1>
       <p>
         I'm a  Mathematics PhD candidate at the <a href="https://www.uh.edu/nsm/math/">University of Houston.</a> 
-        I study and build methods for continuous time learning. I enjoy teaching and coding challenges.
+        I am currently working on diffeomorphic learning, optimal control and neural Hawkes process. I also enjoy teaching and coding challenges.
       </p>
        <hr>
       <p>
