--- a/teaching.html
+++ b/teaching.html
@@ -50,6 +50,8 @@ layout: null
 
       <h2 style="margin-top: 1.5rem;">Teaching Assistant @ UH</h2>
       <ul>
+        <li>Grader: <strong>Math 2305 — Discrete Mathematics</strong>, <em>Fall 2025</em></li>
+        <li>Lab Instructor: <strong>Math 2414 — Calculus II</strong>, <em>Fall 2025</em></li>
         <li>Grader: <strong>Math 2413 — Calculus I</strong>, <em>Summer 2025</em></li>
         <li>Lab Instructor: <strong>Math 2414 — Calculus II</strong>, <em>Spring 2025</em></li>
         <li>Grader: <strong>Math 3363 — Introduction to Partial Differential Equations</strong>, <em>Spring 2025</em></li>
