--- a/teaching.html
+++ b/teaching.html
@@ -38,7 +38,7 @@ layout: null
         <a href="/">Home</a>
         <a href="/research/">Research</a>
         <a href="/teaching/" aria-current="page">Teaching</a>
-        <a href="/presentations/">Presentations</a>
+        <a href="/conferences/">Conferences</a>
       </nav>
     </div>
   </header>
