--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a href="/">Home</a>
             <a href="/research/">Research</a>
             <a href="/teaching/">Teaching</a>
-            <a href="/presentations/">Presentations</a>
+            <a href="/conferences/">Conferences</a>
        </nav>
 
     </div>
