--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <!-- Full-width feature image -->
 <section class="feature" style="background-image: url('/images/xris.jpg');">
   <div class="container typeset">
-    <!-- I can add a text here. -->
+    <!-- I can add a text here.. -->
   </div>
 </section>
 
