first_webpage.html

--- a/first_webpage.html
+++ b/first_webpage.html
@@ -5,7 +5,7 @@
             <link rel="stylesheet" type="text/css" href="animals.css">
         </head>
         <body>
-            <h1>Life in the </h1>
+            <h1>Life in the wild</h1>
             <div class ="container">
                 <img src ="images/wild_animals/horse-herd.jpeg">
                 <img src ="images/wild_animals/elephant-cub.jpeg
