--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <span class="site-title">Deep Math</span>
       </a>
       
-        <!-- Hamburger toggle (mobile vie) -->
+        <!-- Hamburger toggle (mobile view) -->
         <button class="nav-toggle" aria-label="Open menu" aria-expanded="false" aria-controls="primary-nav">
         <!-- three bars -->
         <svg width="24" height="24" viewBox="0 0 24 24" aria-hidden="true">
